# reddit-story

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_image.py  test_tts.py  test_video.py
config/: settings.py
templates/admin/: base_site.html
video_pipeline/: admin.py  apps.py  forms.py  models.py  pipeline.py  splitter.py  text_sanitizer.py
video_pipeline/crew/: agents.py  crew.py  tasks.py
video_pipeline/generators/: __init__.py  base.py  diffusion_generator.py  edge_tts_generator.py  falconsai_rewriter.py  ffmpeg_generator.py  gemini_generator.py  gtts_generator.py  ollama_generator.py
video_pipeline/migrations/: 0001_initial.py  0002_storyjob_image_style_ttssettings_image_style.py  0003_alter_storyjob_status.py  0004_storyjob_format_ttssettings_format_and_more.py  0005_storyjob_rewritten_text_alter_storyjob_status.py  0006_remove_storyjob_audio_path_and_more.py  0007_add_voice_gender_update_speed_choices.py  0008_add_stopped_status.py  0009_multi_image_diffusion_model.py
video_pipeline/templates/admin/video_pipeline/: generate_story.html
video_pipeline/templates/admin/video_pipeline/storyjob/: change_list.html
video_pipeline/tools/: image_tool.py  tts_tool.py  video_tool.py
